# blog_app

./: README.md  pyproject.toml
app/: __init__.py  auth.py  blog.py  models.py  schema.sql
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/blog/: create.html  index.html
tests/: conftest.py  data.sql  test_blog.py  test_db.py  test_factory.py
